# tec_model

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  dunaden.zsh-theme  postCreateCommand.sh
reports/: pytest_report.xml
src/: script.py
src/tec_model/: cui_devices_cp35.py  thermoelectric_cooler.py
tests/unit/: test_example.py
